# FC020

./: .gitignore  0.bundle.js  1.bundle.js  Cargo.toml  README.md  fd_laplace.html  index.html  linear_regression.html  matrix.txt  mol_diffusion.html  rhs.txt  theory_lr.html
fd_laplace/: Cargo.toml
fd_laplace_wasm/: Cargo.toml
fd_laplace_wasm/src/: cg_sparse.rs  lib.rs  square.rs
fd_laplace_wasm/web/: package-lock.json  package.json  webpack.config.js
fd_laplace_wasm/web/styles/: style.css
linear_regression/: Cargo.toml
linear_regression_wasm/: .gitignore  Cargo.toml
linear_regression_wasm/src/: lib.rs
linear_regression_wasm/web/: linear_regression.html  package-lock.json  package.json  webpack.config.js
mol_diffusion/: Cargo.toml
results_fd_laplace/: README.md  error.py  plot_results.py  plot_results_fd_laplace.py  solution_size_100.mat  solution_size_101.mat  solution_size_200.mat  solution_size_201.mat  solution_size_25.mat  solution_size_401.mat  solution_size_50.mat  solution_size_51.mat
results_linear_regression/: README.html  README.md  ref.bib  tags
results_mol_diffusion/: README.html  README.md  animation.py  plots.py  results_0.out  results_1.out  results_10.out  results_11.out  results_12.out  results_13.out  results_14.out  results_15.out  results_16.out  results_17.out  results_18.out  results_19.out  results_2.out  results_20.out  results_21.out  results_22.out  results_23.out  results_24.out  results_25.out  results_26.out  results_27.out  results_28.out  results_29.out  results_3.out  results_30.out  results_31.out  results_32.out  results_33.out  results_34.out  results_35.out  results_36.out  results_37.out  results_38.out  results_39.out  (+66 more)
(+16 files in other folders)
