[package]
name = "fd_laplace"
version = "0.1.0"
authors = ["tungli <tun@mail.muni.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"

[dependencies.nalgebra]
version = "0.19.0"
features = ["sparse"]

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]

