[package]
name = "fd_laplace"
version = "0.1.0"
authors = ["tungli <tun@mail.muni.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gnuplot = "0.0.34"

[dependencies.nalgebra]
version = "0.19.0"
features = ["sparse"]
