[package]
name = "fd_laplace_wasm"
version = "0.1.0"
authors = ["tungli <tun@mail.muni.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.nalgebra]
version = "0.19.0"
features = ["sparse"]

[profile.release]
lto = true
opt-level = 's'

