[package]
name = "fc020_lr_wasm"
version = "0.1.0"
authors = ["tungli <tun@mail.muni.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.7.3"
rand_distr = "0.2.2"
nalgebra = "0.20"
puruspe = "0.1.3"
roots = "0.0.6"

[profile.release]
lto = true
opt-level = 's'
